Update search functionality, pagination, and configurations across modules for improved consistency and usability.